package heig.main;

import java.awt.*;

public interface Renderer {
    void display(Graphics2D g, Bounceable b);
}
